test/__snapshots__/diagnostics/missingEffectError_plainAssignment.ts.codefixes
missingEffectError_skipNextLine from 400 to 416
missingEffectError_skipFile from 400 to 416
missingEffectError_skipNextLine from 493 to 506
missingEffectError_skipFile from 493 to 506
missingEffectError_skipNextLine from 682 to 708
missingEffectError_skipFile from 682 to 708
missingEffectError_skipNextLine from 956 to 972
missingEffectError_skipFile from 956 to 972
missingEffectError_skipNextLine from 843 to 856
missingEffectError_skipFile from 843 to 856